5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/1407/executions/1573_1328.log
== TEST (2019-03-13 14:07:01) 
-- CODE:
jkjk
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    jkjk
NameError: name 'jkjk' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:07:59) 
-- CODE:
print("70")
-- EXECUTION TIME:
0.139497
-- TEST CASE 1:
---- input:
xxx
---- correct output:
700
---- user output:
70
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:08:20) 
-- CODE:
print(20 * 35)
-- EXECUTION TIME:
0.187567
-- TEST CASE 1:
---- input:
xxx
---- correct output:
700
---- user output:
700
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
